@@ -1,5 +1,7 @@
 0.21.4	UNRELEASED
 
+ * Deprecate ``dulwich.objects.parse_commit``.
+
 0.21.3	2023-02-17
 
  * Add support for ``worktreeconfig`` extension.
